k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-app-service
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
  # type: NodePort
